codama-macros/tests/node_attribute/double_node.fail.rs
use codama_macros::node;

#[node(numberTypeNode(u32, le), publicKeyTypeNode())]
pub struct Foo(usize);

fn main() {}
